syntax = "proto3";
package allKVsBackup;
option go_package = "/allKVsBackup";

//all kvs backup
message AllKVsBackup {
  message Input {

  }

  message Output {
    string  Name = 1;
    bytes File = 2;
  }
}